# promql-forge

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
promql_builder/: __init__.py  aggregations.py  expressions.py  functions.py  models.py  modifiers.py  util.py  vectors.py
promql_forge/: __init__.py  aggregations.py  expressions.py  functions.py  models.py  util.py  vectors.py
tests/: helpers.py  test_aggregation.py  test_builder.py  test_expressions.py  test_models.py
tests/queries/: test_queries.py
