[project]
name = "promql-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportIncompatibleMethodOverride = false
reportInconsistentOverload = false

[dependency-groups]
dev = ["pytest>=8.4.2"]
