[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "promql-forge"
dynamic = ["version"]
description = "A Python library for building PromQL queries programmatically"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = [
    "prometheus",
    "promql",
    "monitoring",
    "observability",
    "query-builder",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vladimir-kotikov/promql-forge"
Issues = "https://github.com/vladimir-kotikov/promql-forge/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["promql_forge/", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["promql_forge"]

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportIncompatibleMethodOverride = false
reportInconsistentOverload = false

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.1.0"]
